syntax = "proto3";

option java_multiple_files = true;
option java_package = "ee.aleksale.client.proto.v1";

import "commerce-response.proto";

service ClientRegistrationService {
  rpc registerClient(Client) returns (CommerceResponse);
}

service ClientService {
  rpc addMoney(Client) returns (CommerceResponse);
}