syntax = "proto3";

option java_multiple_files = true;
option java_package = "ee.aleksale.common.payment.proto.v1";

import "inventory-common.proto";

message Payment {
  string identificationCode = 1;
  repeated InventoryOrder inventoryOrders = 2;
  double totalSum = 3;
}